src/global.css
/**
 * WHAT IS THIS FILE?
 *
 * Globally applied styles. No matter which components are in the page or matching route,
 * the styles in here will be applied to the Document, without any sort of CSS scoping.
 *
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .animation-delay-5 { animation-delay: -5s; }
  .animation-delay-10 { animation-delay: -10s; }
}

@font-face {
  font-family: Futura Book;
  src: url(/fonts/FuturaBook.ttf);
  font-display: swap;
}

.font-futura {
  font-family: Futura Book;
}

html {
  overflow: overlay;
  background-color: hsl(0deg, 0%, 5%);
}

* { scroll-behavior: smooth; }
*::-webkit-scrollbar {
  appearance: none;
  -webkit-appearance: none;
  width: 8px;
}
*::-webkit-scrollbar-track {
  background-color: #00000000;
  border-radius: 3px;
}
*::-webkit-scrollbar-thumb {
  background-color: #ffffff20;
  border-radius: 2px;
}

/* NAVBAR TRANSITION */
nav {
  view-transition-name: nav;
}

/* MAIN TRANSITION */
main {
  view-transition-name: root;
}

::view-transition-old(root) {
  animation: 90ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-bottom;
}

::view-transition-new(root) {
  animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
    300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-top;
}


@keyframes fade-in {
  from { opacity: 0; }
}

@keyframes fade-out {
  to { opacity: 0; }
}
@keyframes slide-from-top {
  from {
    transform: translateY(30px);
    scale: 0.95;
  }
}
@keyframes slide-to-bottom {
  to {
    transform: translateY(-30px);
    scale: 0.95;
  }
}

